publish: 更新美股实时数据
generated from commit 1c12a6418c5df1e17d1ee6a04f431d37f0b3d429

--- a/index.html
+++ b/index.html
@@ -1796,19 +1796,27 @@
 <pre class="highlight python tab-python"><code><span class="kn">import</span> <span class="nn">requests</span>
 
 <span class="n">info</span> <span class="o">=</span> <span class="n">requests</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="s">'http://api.trochil.com/v1/usstock/quote'</span><span class="p">,</span>
-                    <span class="n">params</span><span class="o">=</span><span class="p">{</span>
-                        <span class="s">'symbol'</span><span class="p">:</span> <span class="s">'BABA,JD'</span><span class="p">,</span>
-                        <span class="s">'apikey'</span><span class="p">:</span> <span class="s">'your apikey'</span><span class="p">}</span>
-                    <span class="p">)</span>
+                    <span class="n">params</span><span class="o">=</span><span class="p">{</span><span class="s">'symbol'</span><span class="p">:</span> <span class="s">'AAPL,BABA,BF.B'</span><span class="p">,</span> <span class="s">'apikey'</span><span class="p">:</span> <span class="s">'your apikey'</span><span class="p">})</span>
 </code></pre>
 <blockquote>
 <p>返回结果：查询美股实时报价</p>
 </blockquote>
 <pre class="highlight json tab-json"><code><span class="p">{</span><span class="w">
-    </span><span class="err">'timestamp'</span><span class="p">:</span><span class="w"> </span><span class="mi">1583478603847</span><span class="p">,</span><span class="w">
+    </span><span class="err">'timestamp'</span><span class="p">:</span><span class="w"> </span><span class="mi">1590559857542</span><span class="p">,</span><span class="w">
     </span><span class="err">'data'</span><span class="p">:</span><span class="w"> </span><span class="p">[</span><span class="w">
-        </span><span class="err">'</span><span class="p">{</span><span class="s2">"symbol"</span><span class="p">:</span><span class="w"> </span><span class="s2">"BABA"</span><span class="p">,</span><span class="w"> </span><span class="s2">"name"</span><span class="p">:</span><span class="w"> </span><span class="s2">"阿里巴巴"</span><span class="p">,</span><span class="w"> </span><span class="s2">"last"</span><span class="p">:</span><span class="w"> </span><span class="s2">"211.46"</span><span class="p">,</span><span class="w"> </span><span class="s2">"timestamp"</span><span class="p">:</span><span class="w"> </span><span class="s2">"1583476040000"</span><span class="p">}</span><span class="err">'</span><span class="p">,</span><span class="w">
-        </span><span class="err">'</span><span class="p">{</span><span class="s2">"symbol"</span><span class="p">:</span><span class="w"> </span><span class="s2">"JD"</span><span class="p">,</span><span class="w"> </span><span class="s2">"name"</span><span class="p">:</span><span class="w"> </span><span class="s2">"京东"</span><span class="p">,</span><span class="w"> </span><span class="s2">"last"</span><span class="p">:</span><span class="w"> </span><span class="s2">"44.62"</span><span class="p">,</span><span class="w"> </span><span class="s2">"timestamp"</span><span class="p">:</span><span class="w"> </span><span class="s2">"1583477955000"</span><span class="p">}</span><span class="err">'</span><span class="p">],</span><span class="w">
+        </span><span class="p">{</span><span class="err">'symbol'</span><span class="p">:</span><span class="w"> </span><span class="err">'BABA'</span><span class="p">,</span><span class="w"> </span><span class="err">'bid'</span><span class="p">:</span><span class="w"> </span><span class="mf">201.71</span><span class="p">,</span><span class="w"> </span><span class="err">'ask'</span><span class="p">:</span><span class="w"> </span><span class="mf">201.82</span><span class="p">,</span><span class="w"> </span><span class="err">'bid_qty'</span><span class="p">:</span><span class="w"> </span><span class="mi">23</span><span class="p">,</span><span class="w"> </span><span class="err">'ask_qty'</span><span class="p">:</span><span class="w"> </span><span class="mi">51</span><span class="p">,</span><span class="w"> </span><span class="err">'timestamp'</span><span class="p">:</span><span class="w"> </span><span class="err">'</span><span class="mi">1590523199990</span><span class="err">'</span><span class="p">,</span><span class="w">
+         </span><span class="err">'datetime'</span><span class="p">:</span><span class="w"> </span><span class="err">'</span><span class="mi">2020-05-27</span><span class="w"> </span><span class="mi">03</span><span class="p">:</span><span class="mi">59</span><span class="p">:</span><span class="mi">59</span><span class="err">'</span><span class="p">,</span><span class="w"> </span><span class="err">'name'</span><span class="p">:</span><span class="w"> </span><span class="err">'阿里巴巴'</span><span class="p">,</span><span class="w"> </span><span class="err">'change'</span><span class="p">:</span><span class="w"> </span><span class="mf">2.02</span><span class="p">,</span><span class="w"> </span><span class="err">'percent_change'</span><span class="p">:</span><span class="w"> </span><span class="mf">1.01</span><span class="p">,</span><span class="w"> </span><span class="err">'pre_close'</span><span class="p">:</span><span class="w"> </span><span class="mf">199.7</span><span class="p">,</span><span class="w">
+         </span><span class="err">'open'</span><span class="p">:</span><span class="w"> </span><span class="mf">205.94</span><span class="p">,</span><span class="w"> </span><span class="err">'high'</span><span class="p">:</span><span class="w"> </span><span class="mf">206.8</span><span class="p">,</span><span class="w"> </span><span class="err">'low'</span><span class="p">:</span><span class="w"> </span><span class="mf">201.0</span><span class="p">,</span><span class="w"> </span><span class="err">'volume'</span><span class="p">:</span><span class="w"> </span><span class="mf">28683134.0</span><span class="p">,</span><span class="w"> </span><span class="err">'mktcap'</span><span class="p">:</span><span class="w"> </span><span class="mf">541279611116.0</span><span class="p">,</span><span class="w"> </span><span class="err">'pe'</span><span class="p">:</span><span class="w"> </span><span class="mf">21.5743308</span><span class="p">,</span><span class="w">
+         </span><span class="err">'exchange'</span><span class="p">:</span><span class="w"> </span><span class="err">'NYSE'</span><span class="p">},</span><span class="w">
+        </span><span class="p">{</span><span class="err">'symbol'</span><span class="p">:</span><span class="w"> </span><span class="err">'AAPL'</span><span class="p">,</span><span class="w"> </span><span class="err">'bid'</span><span class="p">:</span><span class="w"> </span><span class="mf">316.72</span><span class="p">,</span><span class="w"> </span><span class="err">'ask'</span><span class="p">:</span><span class="w"> </span><span class="mf">316.84</span><span class="p">,</span><span class="w"> </span><span class="err">'bid_qty'</span><span class="p">:</span><span class="w"> </span><span class="mi">52</span><span class="p">,</span><span class="w"> </span><span class="err">'ask_qty'</span><span class="p">:</span><span class="w"> </span><span class="mi">19</span><span class="p">,</span><span class="w"> </span><span class="err">'timestamp'</span><span class="p">:</span><span class="w"> </span><span class="err">'</span><span class="mi">1590523199964</span><span class="err">'</span><span class="p">,</span><span class="w">
+         </span><span class="err">'datetime'</span><span class="p">:</span><span class="w"> </span><span class="err">'</span><span class="mi">2020-05-27</span><span class="w"> </span><span class="mi">03</span><span class="p">:</span><span class="mi">59</span><span class="p">:</span><span class="mi">59</span><span class="err">'</span><span class="p">,</span><span class="w"> </span><span class="err">'name'</span><span class="p">:</span><span class="w"> </span><span class="err">'苹果公司'</span><span class="p">,</span><span class="w"> </span><span class="err">'change'</span><span class="p">:</span><span class="w"> </span><span class="mf">-2.16</span><span class="p">,</span><span class="w"> </span><span class="err">'percent_change'</span><span class="p">:</span><span class="w"> </span><span class="mf">-0.68</span><span class="p">,</span><span class="w">
+         </span><span class="err">'pre_close'</span><span class="p">:</span><span class="w"> </span><span class="mf">318.89</span><span class="p">,</span><span class="w"> </span><span class="err">'open'</span><span class="p">:</span><span class="w"> </span><span class="mf">323.5</span><span class="p">,</span><span class="w"> </span><span class="err">'high'</span><span class="p">:</span><span class="w"> </span><span class="mf">324.24</span><span class="p">,</span><span class="w"> </span><span class="err">'low'</span><span class="p">:</span><span class="w"> </span><span class="mf">316.5</span><span class="p">,</span><span class="w"> </span><span class="err">'volume'</span><span class="p">:</span><span class="w"> </span><span class="mf">31380454.0</span><span class="p">,</span><span class="w">
+         </span><span class="err">'mktcap'</span><span class="p">:</span><span class="w"> </span><span class="mf">1373173460731.0</span><span class="p">,</span><span class="w"> </span><span class="err">'pe'</span><span class="p">:</span><span class="w"> </span><span class="mf">24.62908394</span><span class="p">,</span><span class="w"> </span><span class="err">'exchange'</span><span class="p">:</span><span class="w"> </span><span class="err">'NASDAQ'</span><span class="p">},</span><span class="w">
+        </span><span class="p">{</span><span class="err">'symbol'</span><span class="p">:</span><span class="w"> </span><span class="err">'BF.B'</span><span class="p">,</span><span class="w"> </span><span class="err">'bid'</span><span class="p">:</span><span class="w"> </span><span class="mf">63.54</span><span class="p">,</span><span class="w"> </span><span class="err">'ask'</span><span class="p">:</span><span class="w"> </span><span class="mf">63.55</span><span class="p">,</span><span class="w"> </span><span class="err">'bid_qty'</span><span class="p">:</span><span class="w"> </span><span class="mi">61</span><span class="p">,</span><span class="w"> </span><span class="err">'ask_qty'</span><span class="p">:</span><span class="w"> </span><span class="mi">4</span><span class="p">,</span><span class="w"> </span><span class="err">'timestamp'</span><span class="p">:</span><span class="w"> </span><span class="err">'</span><span class="mi">1590523199982</span><span class="err">'</span><span class="p">,</span><span class="w">
+         </span><span class="err">'datetime'</span><span class="p">:</span><span class="w"> </span><span class="err">'</span><span class="mi">2020-05-27</span><span class="w"> </span><span class="mi">03</span><span class="p">:</span><span class="mi">59</span><span class="p">:</span><span class="mi">59</span><span class="err">'</span><span class="p">,</span><span class="w"> </span><span class="err">'name'</span><span class="p">:</span><span class="w"> </span><span class="err">'布朗霍文集团'</span><span class="p">,</span><span class="w"> </span><span class="err">'change'</span><span class="p">:</span><span class="w"> </span><span class="mf">-1.24</span><span class="p">,</span><span class="w"> </span><span class="err">'percent_change'</span><span class="p">:</span><span class="w"> </span><span class="mf">-1.91</span><span class="p">,</span><span class="w">
+         </span><span class="err">'pre_close'</span><span class="p">:</span><span class="w"> </span><span class="mf">64.78</span><span class="p">,</span><span class="w"> </span><span class="err">'open'</span><span class="p">:</span><span class="w"> </span><span class="mf">66.2</span><span class="p">,</span><span class="w"> </span><span class="err">'high'</span><span class="p">:</span><span class="w"> </span><span class="mf">66.2</span><span class="p">,</span><span class="w"> </span><span class="err">'low'</span><span class="p">:</span><span class="w"> </span><span class="mf">63.35</span><span class="p">,</span><span class="w"> </span><span class="err">'volume'</span><span class="p">:</span><span class="w"> </span><span class="mf">1582838.0</span><span class="p">,</span><span class="w"> </span><span class="err">'mktcap'</span><span class="p">:</span><span class="w"> </span><span class="mf">30513647377.0</span><span class="p">,</span><span class="w">
+         </span><span class="err">'pe'</span><span class="p">:</span><span class="w"> </span><span class="mf">35.30000144</span><span class="p">,</span><span class="w"> </span><span class="err">'exchange'</span><span class="p">:</span><span class="w"> </span><span class="err">'NYSE'</span><span class="p">}</span><span class="w">
+    </span><span class="p">],</span><span class="w">
     </span><span class="err">'status'</span><span class="p">:</span><span class="w"> </span><span class="err">'ok'</span><span class="w">
 </span><span class="p">}</span><span class="w">
 </span></code></pre>
@@ -1875,22 +1883,92 @@
 <tr>
 <td>symbol</td>
 <td>String</td>
-<td>股票代码</td>
+<td>美股对应代码</td>
 </tr>
 <tr>
-<td>name</td>
-<td>String</td>
-<td>股票中文名称</td>
+<td>bid</td>
+<td>float</td>
+<td>最新最优买价</td>
 </tr>
 <tr>
-<td>last</td>
-<td>String</td>
-<td>最新成交价</td>
+<td>ask</td>
+<td>float</td>
+<td>最新最优卖价</td>
+</tr>
+<tr>
+<td>bid_qty</td>
+<td>float</td>
+<td>最新最优买价对应的挂单量</td>
+</tr>
+<tr>
+<td>ask_qty</td>
+<td>float</td>
+<td>最新最优卖价对应的挂单量</td>
 </tr>
 <tr>
 <td>timestamp</td>
 <td>String</td>
-<td>实时价格时间</td>
+<td>最新交易发生时间</td>
+</tr>
+<tr>
+<td>datetime</td>
+<td>String</td>
+<td>最新交易发生北京时间</td>
+</tr>
+<tr>
+<td>name</td>
+<td>String</td>
+<td>美股中文名称</td>
+</tr>
+<tr>
+<td>change</td>
+<td>float</td>
+<td>价格变动数额</td>
+</tr>
+<tr>
+<td>percent_change</td>
+<td>float</td>
+<td>价格变动百分比</td>
+</tr>
+<tr>
+<td>pre_close</td>
+<td>float</td>
+<td>昨日收盘价</td>
+</tr>
+<tr>
+<td>open</td>
+<td>float</td>
+<td>今日开盘价</td>
+</tr>
+<tr>
+<td>high</td>
+<td>float</td>
+<td>今日最高价</td>
+</tr>
+<tr>
+<td>low</td>
+<td>float</td>
+<td>今日最低价</td>
+</tr>
+<tr>
+<td>volume</td>
+<td>float</td>
+<td>成交量</td>
+</tr>
+<tr>
+<td>mktcap</td>
+<td>float</td>
+<td>市值</td>
+</tr>
+<tr>
+<td>pe</td>
+<td>float</td>
+<td>市盈率</td>
+</tr>
+<tr>
+<td>exchange</td>
+<td>String</td>
+<td>交易所</td>
 </tr>
 </tbody></table>
 <h2 id='fdca4c5804-3'>日图历史</h2>
