--- a/index.html
+++ b/index.html
@@ -4454,7 +4454,7 @@
 <h1 id='websocket'>Websocket行情数据</h1><h2 id='5ea2e0cde2-2'>简介</h2><h3 id='url'>接入url</h3>
 <p>websocket接入地址</p>
 
-<p>ws://stream.trochil.com/ws</p>
+<p>ws://stream.trochil.com/ws 后拼接市场类型,如A股为ws://stream.trochil.com/ws/cnstock</p>
 <h3 id='65cd7614bc'>订阅主题</h3>
 <p>成功建立与Websocket服务器的连接后，需要进行apikey认证,发送如下消息认证apikey:</p>
 
