--- a/index.html
+++ b/index.html
@@ -362,6 +362,9 @@
                   <li>
                     <a href="#6c10407dda" class="toc-h2 toc-link" data-title="数字货币实时数据">数字货币实时数据</a>
                   </li>
+                  <li>
+                    <a href="#2cd5365606" class="toc-h2 toc-link" data-title="外汇实时数据">外汇实时数据</a>
+                  </li>
               </ul>
           </li>
           <li>
@@ -4792,6 +4795,43 @@
 <td>quote_volume</td>
 <td>String</td>
 <td>成交量基于基础币</td>
+</tr>
+<tr>
+<td>symbol</td>
+<td>String</td>
+<td>交易对代码</td>
+</tr>
+<tr>
+<td>timestamp</td>
+<td>String</td>
+<td>最新成交时间</td>
+</tr>
+</tbody></table>
+<h2 id='2cd5365606'>外汇实时数据</h2><h3 id='a94c7743c5-6'>主题订阅</h3>
+<p>地址 /forex
+一旦对应交易对数据产生，Websocket服务器将通过此订阅主题接口推送至客户端</p>
+<h3 id='041532e3a2'>外汇实时数据更新字段列表</h3>
+<table><thead>
+<tr>
+<th>字段名称</th>
+<th>数据类型</th>
+<th>描述</th>
+</tr>
+</thead><tbody>
+<tr>
+<td>ask</td>
+<td>String</td>
+<td>最优卖价</td>
+</tr>
+<tr>
+<td>bid</td>
+<td>String</td>
+<td>最优买价</td>
+</tr>
+<tr>
+<td>id</td>
+<td>String</td>
+<td>品种所对应的id</td>
 </tr>
 <tr>
 <td>symbol</td>
