publish: 修改错误码为中文
generated from commit 20964c7b7a08dbbb31d790090f6d882d4cb273b4

--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
               </ul>
           </li>
           <li>
-            <a href="#errors" class="toc-h1 toc-link" data-title="Errors">Errors</a>
+            <a href="#e08c1d4f9a" class="toc-h1 toc-link" data-title="错误码">错误码</a>
           </li>
       </ul>
         <ul class="toc-footer">
@@ -5700,7 +5700,7 @@
 <td>个股标签</td>
 </tr>
 </tbody></table>
-<h1 id='errors'>Errors</h1>
+<h1 id='e08c1d4f9a'>错误码</h1>
 <p>The trochil API uses the following error codes:</p>
 
 <table><thead>
