--- a/index.html
+++ b/index.html
@@ -5575,7 +5575,9 @@
              </span><span class="err">'url'</span><span class="p">:</span><span class="w"> </span><span class="err">'XXX'</span><span class="p">,</span><span class="w">
              </span><span class="err">'source'</span><span class="p">:</span><span class="w"> </span><span class="err">'东方财富网'</span><span class="p">,</span><span class="w">
              </span><span class="err">'subcat'</span><span class="p">:</span><span class="w"> </span><span class="err">'cnstock'</span><span class="p">,</span><span class="w">
-             </span><span class="err">'individual'</span><span class="p">:</span><span class="w"> </span><span class="err">'SH</span><span class="mi">600000</span><span class="err">'</span><span class="w">
+             </span><span class="err">'individual'</span><span class="p">:</span><span class="w"> </span><span class="err">'SH</span><span class="mi">600000</span><span class="err">'</span><span class="p">,</span><span class="w">
+             </span><span class="err">'id'</span><span class="p">:</span><span class="w"> </span><span class="err">'XXX'</span><span class="p">,</span><span class="w">
+             </span><span class="err">'top_image'</span><span class="p">:</span><span class="w"> </span><span class="err">'XXX'</span><span class="w">
              </span><span class="p">}</span><span class="w">
         </span><span class="p">]</span><span class="w">
 </span><span class="p">}</span><span class="w">
@@ -5698,6 +5700,16 @@
 <td>individual</td>
 <td>Float</td>
 <td>个股标签</td>
+</tr>
+<tr>
+<td>id</td>
+<td>String</td>
+<td>新闻唯一id标识</td>
+</tr>
+<tr>
+<td>top_image</td>
+<td>List</td>
+<td>顶部图片</td>
 </tr>
 </tbody></table>
 <h1 id='e08c1d4f9a'>错误码</h1>
